packages/SDL3/SDL_gpu.inc

function SDL_GPUTextureSupportsSampleCount(device: PSDL_GPUDevice; format: TSDL_GPUTextureFormat; sample_count: TSDL_GPUSampleCount): Tbool; cdecl; external libSDL3;
{$ifdef SDL_PLATFORM_GDK}
procedure SDL_GDKSuspendGPU(device: PSDL_GPUDevice); cdecl; external libSDL3;
procedure SDL_GDKResumeGPU(device: PSDL_GPUDevice); cdecl; external libSDL3;
{$endif}

{$ENDIF read_interface}


{$IFDEF read_implementation}


{$ENDIF read_implementation}
